--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8" />
     <title>Exercice hebdomadaire 3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="inscription">S'inscrire maintenant</div>
+    <div class="newsletter">S'abboner a la newsletter</div>
+    <div class="addtocart">Ajouter au panier</div>
 
     <script src="js/main.js" type="module"></script>
   </body>
